Update Notebook Simone

--- a/notebook/ML_cup_gs_Simone.ipynb
+++ b/notebook/ML_cup_gs_Simone.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_9015/1381934199.py:5: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -38,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -145,12 +130,25 @@
      "output_type": "stream",
      "text": [
       "tot conf: 64\n",
-      "9066\n",
-      " started new kfold9067 started new kfold\n",
-      "9072 started new kfold\n",
-      "9081 started new kfold\n",
-      "9088 started new kfold\n",
-      "9097 started new kfold\n"
+      "93359336  9337started new kfold \n",
+      "started new kfoldstarted new kfold\n",
+      "\n",
+      "9344"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 9355started new kfold9366  \n",
+      "93769370started new kfold93729367   \n",
+      "started new kfold started new kfold\n",
+      "started new kfold9401started new kfoldstarted new kfold\n",
+      "\n",
+      "\n",
+      " \n",
+      "9420started new kfold \n",
+      "started new kfold\n"
      ]
     }
    ],
@@ -178,7 +176,7 @@
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 6, False)"
+    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 12, False)"
    ]
   }
  ],
