--- a/notebook/ML_cup_gs_Giacomo.ipynb
+++ b/notebook/ML_cup_gs_Giacomo.ipynb
@@ -131,76 +131,81 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13185 started new kfold\n",
+      "13186 started new kfold13191\n",
+      " started new kfold13200\n",
+      " started new kfold\n",
+      "13211 started new kfold\n",
+      "13223 started new kfold\n",
+      "13231 13236started new kfold\n",
+      " started new kfold13249 \n",
+      "started new kfold\n",
+      "132691325413270 started new kfold\n",
+      "  started new kfold\n",
+      "started new kfold\n",
+      "13191 started new kfold\n",
+      "13211 started new kfold\n",
+      "13236 started new kfold\n",
+      "13254 started new kfold\n",
+      "13211 started new kfold\n",
+      "13185 started new kfold\n",
+      "13270 started new kfold\n",
+      "13191 started new kfold\n",
+      "13270 started new kfold\n",
+      "13186 started new kfold\n",
+      "13223 started new kfold\n",
+      "13200 started new kfold\n",
+      "13249 started new kfold\n",
+      "13269 started new kfold\n",
+      "13231 started new kfold\n",
+      "13236 started new kfold\n",
+      "13254 started new kfold\n",
+      "13185 started new kfold\n",
+      "13200 started new kfold\n",
+      "13211 started new kfold\n",
+      "13200 started new kfold\n",
+      "13254 started new kfold\n",
+      "13270 started new kfold\n",
+      "13200 started new kfold\n",
+      "13191 started new kfold\n",
+      "13186 started new kfold\n",
+      "13185 started new kfold\n",
+      "13223 started new kfold\n",
+      "13231 started new kfold\n",
+      "13249 started new kfold\n",
+      "13269 started new kfold\n",
+      "13236 started new kfold\n",
+      "13211 started new kfold\n",
+      "13254 started new kfold\n",
+      "13270 started new kfold\n",
+      "13186 started new kfold\n",
+      "13200 started new kfold\n",
+      "13191 started new kfold\n",
+      "13223 started new kfold\n",
+      "13223 started new kfold\n",
+      "13185 started new kfold\n",
+      "13231 started new kfold\n",
+      "13249 started new kfold\n",
+      "13269 started new kfold\n",
+      "13236 started new kfold\n",
+      "13186 started new kfold\n",
+      "13191 started new kfold\n",
+      "13231 started new kfold\n",
+      "13185 started new kfold\n",
+      "13249 started new kfold\n",
+      "13269 started new kfold\n",
+      "13186 started new kfold\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/geco/ML_Proj_NN/src/ModelSelection.py:244: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  df = pandas.concat([pandas.read_csv(f, header = 0) for f in backup_file], ignore_index=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1284started new kfold \n",
-      "1285 started new kfold1290\n",
-      " started new kfold\n",
-      "1299 started new kfold\n",
-      "1308 1317started new kfold started new kfold\n",
-      "\n",
-      "1326 started new kfold\n",
-      "1341 started new kfold1350\n",
-      " started new kfold1353\n",
-      " 1362 started new kfold1367started new kfold\n",
-      "\n",
-      " started new kfold\n",
-      "1350 started new kfold\n",
-      "1284 started new kfold\n",
-      "1299 started new kfold\n",
-      "1353 started new kfold\n",
-      "1299 started new kfold\n",
-      "1362 started new kfold\n",
-      "1341 started new kfold\n",
-      "1285 started new kfold\n",
-      "1317 started new kfold\n",
-      "1308 started new kfold\n",
-      "1290 started new kfold\n",
-      "1326 started new kfold\n",
-      "1367 started new kfold\n",
-      "1362 started new kfold\n",
-      "1350 started new kfold\n",
-      "1317 started new kfold\n",
-      "1284 started new kfold\n",
-      "1353 started new kfold\n",
-      "1284 started new kfold\n",
-      "1290 started new kfold\n",
-      "1284 started new kfold\n",
-      "1353 started new kfold\n",
-      "1326 started new kfold\n",
-      "1341 started new kfold\n",
-      "1299 started new kfold\n",
-      "1285 started new kfold\n",
-      "1308 started new kfold\n",
-      "1367 started new kfold\n",
-      "1317 started new kfold\n",
-      "1362 started new kfold\n",
-      "1350 started new kfold\n",
-      "1353 started new kfold\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m c1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: x\n\u001b[1;32m     22\u001b[0m constr \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madamax\u001b[39m\u001b[38;5;124m'\u001b[39m: (c1, [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlearning_rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124malpha_momentum\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlr_decay_tau\u001b[39m\u001b[38;5;124m'\u001b[39m], [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madamax_learning_rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexp_decay_rate_1\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexp_decay_rate_2\u001b[39m\u001b[38;5;124m'\u001b[39m])}\n\u001b[0;32m---> 24\u001b[0m \u001b[43mMS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrid_searchKF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtr_normalized\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhyperparam_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/ML_Proj_NN/src/ModelSelection.py:361\u001b[0m, in \u001b[0;36mModelSelection.grid_searchKF\u001b[0;34m(self, data_set, hyperparameters, constraints, k_folds, n_proc, recovery)\u001b[0m\n\u001b[1;32m    358\u001b[0m     remainder \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    360\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m process \u001b[38;5;129;01min\u001b[39;00m proc_pool: \u001b[38;5;66;03m# join all the terminated processes\u001b[39;00m\n\u001b[0;32m--> 361\u001b[0m     \u001b[43mprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    363\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__merge_csv_file(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbackup)\n",
-      "File \u001b[0;32m/usr/lib/python3.12/multiprocessing/process.py:149\u001b[0m, in \u001b[0;36mBaseProcess.join\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    147\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent_pid \u001b[38;5;241m==\u001b[39m os\u001b[38;5;241m.\u001b[39mgetpid(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcan only join a child process\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    148\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_popen \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcan only join a started process\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m--> 149\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_popen\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    150\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m res \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    151\u001b[0m     _children\u001b[38;5;241m.\u001b[39mdiscard(\u001b[38;5;28mself\u001b[39m)\n",
-      "File \u001b[0;32m/usr/lib/python3.12/multiprocessing/popen_fork.py:43\u001b[0m, in \u001b[0;36mPopen.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     42\u001b[0m     \u001b[38;5;66;03m# This shouldn't block if wait() returned successfully.\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpoll\u001b[49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mWNOHANG\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.0\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturncode\n",
-      "File \u001b[0;32m/usr/lib/python3.12/multiprocessing/popen_fork.py:27\u001b[0m, in \u001b[0;36mPopen.poll\u001b[0;34m(self, flag)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 27\u001b[0m         pid, sts \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaitpid\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflag\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;66;03m# Child process not yet created. See #1731717\u001b[39;00m\n\u001b[1;32m     30\u001b[0m         \u001b[38;5;66;03m# e.errno == errno.ECHILD == 10\u001b[39;00m\n\u001b[1;32m     31\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -233,9 +238,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tot conf: 64\n",
+      "33428 33429started new kfold\n",
+      " started new kfold\n",
+      "33434 started new kfold\n",
+      "33449  started new kfold33456\n",
+      "started new kfold\n",
+      "33465 started new kfold33476\n",
+      " started new kfold33481 \n",
+      "started new kfold33492\n",
+      " 33501started new kfold\n",
+      "33508 started new kfold \n",
+      "started new kfold33515\n",
+      " started new kfold\n",
+      "33481 started new kfold\n",
+      "33449 started new kfold\n",
+      "33492 started new kfold\n",
+      "33465 started new kfold\n",
+      "33429 started new kfold\n",
+      "33428 started new kfold\n",
+      "33456 started new kfold\n",
+      "33508 started new kfold\n",
+      "33515 started new kfold\n",
+      "33501 started new kfold\n",
+      "33434 started new kfold\n",
+      "33476 started new kfold\n",
+      "33456 started new kfold\n",
+      "33481 started new kfold\n",
+      "33449 started new kfold\n",
+      "33515 started new kfold\n",
+      "33492 started new kfold\n",
+      "33476 started new kfold\n",
+      "33465 started new kfold\n",
+      "33492 started new kfold\n",
+      "33515 started new kfold\n",
+      "33429 started new kfold\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/geco/ML_Proj_NN/src/OutputNeuron.py:236: RuntimeWarning: invalid value encountered in multiply\n",
+      "  self.partial_weight_update += (delta_error * predecessors_outputs)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:243: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  self.partial_successors_weighted_errors += (delta * weight)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:256: RuntimeWarning: invalid value encountered in scalar multiply\n",
+      "  delta_error = self.partial_successors_weighted_errors * ActivationFunctions.derivative(self.f, self.net, *self.f_parameters)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:264: RuntimeWarning: invalid value encountered in multiply\n",
+      "  self.partial_weight_update += (delta_error * predecessors_outputs)# accumulating weight updates for the batch version\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:243: RuntimeWarning: overflow encountered in scalar multiply\n",
+      "  self.partial_successors_weighted_errors += (delta * weight)\n",
+      "/home/geco/ML_Proj_NN/src/OutputNeuron.py:236: RuntimeWarning: overflow encountered in multiply\n",
+      "  self.partial_weight_update += (delta_error * predecessors_outputs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33429 started new kfold\n",
+      "33428 started new kfold\n",
+      "33501 started new kfold\n",
+      "33508 started new kfold\n",
+      "33434 started new kfold\n",
+      "33449 started new kfold\n",
+      "33481 started new kfold\n",
+      "33456 started new kfold\n",
+      "33476 started new kfold\n",
+      "33515 started new kfold\n",
+      "33428 started new kfold\n",
+      "33465 started new kfold\n",
+      "33492 started new kfold\n",
+      "33429 started new kfold\n",
+      "33501 started new kfold\n",
+      "33508 started new kfold\n",
+      "33434 started new kfold\n",
+      "33449 started new kfold\n",
+      "33481 started new kfold\n",
+      "33456 started new kfold\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:243: RuntimeWarning: overflow encountered in scalar multiply\n",
+      "  self.partial_successors_weighted_errors += (delta * weight)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:256: RuntimeWarning: invalid value encountered in scalar multiply\n",
+      "  delta_error = self.partial_successors_weighted_errors * ActivationFunctions.derivative(self.f, self.net, *self.f_parameters)\n",
+      "/home/geco/ML_Proj_NN/src/ErrorFunctions.py:33: RuntimeWarning: overflow encountered in square\n",
+      "  error = numpy.mean(numpy.sum((targets-outputs)**2, axis=1))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33476 started new kfold\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/core/_methods.py:176: RuntimeWarning: overflow encountered in multiply\n",
+      "  x = um.multiply(x, x, out=x)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33428 started new kfold\n",
+      "33465 started new kfold\n",
+      "33429 started new kfold\n",
+      "33501 started new kfold\n",
+      "33434 started new kfold\n",
+      "33508 started new kfold\n",
+      "33449 started new kfold\n",
+      "33428 started new kfold\n",
+      "33434 started new kfold\n"
+     ]
+    }
+   ],
    "source": [
     "MS = ModelSelection('../data/2l_relu_2.csv')\n",
     "    \n",
@@ -260,7 +393,7 @@
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 12, True)"
+    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 12, False)"
    ]
   }
  ],
