other changes on validation output

--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -230,7 +230,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# imports\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "# data\n",
+    "df = px.data.stocks().set_index('date')\n",
+    "maps = {'group 1': ['GOOG', 'AAPL', 'AMZN', 'FB'],\n",
+    "           'group 2':['NFLX', 'MSFT']}\n",
+    "\n",
+    "# plotly figure\n",
+    "fig = px.line(df, x=df.index, y = df.columns) \n",
+    "\n",
+    "# groups and trace visibilities\n",
+    "group = []\n",
+    "vis = []\n",
+    "visList = []\n",
+    "for m in maps.keys():\n",
+    "    for col in df.columns:\n",
+    "        if col in maps[m]:\n",
+    "            vis.append(True)\n",
+    "        else:\n",
+    "            vis.append(False)\n",
+    "    group.append(m)\n",
+    "    visList.append(vis)\n",
+    "    vis = []\n",
+    "\n",
+    "# buttons for each group\n",
+    "buttons = []\n",
+    "for i, g in enumerate(group):\n",
+    "    button =  dict(label=g,\n",
+    "                   method = 'restyle',\n",
+    "                    args = ['visible',visList[i]])\n",
+    "    buttons.append(button)\n",
+    "\n",
+    "buttons = [{'label': 'all',\n",
+    "                 'method': 'restyle',\n",
+    "                 'args': ['visible', [True, True, True, True, True, True]]}] + buttons\n",
+    "\n",
+    "                     \n",
+    "\n",
+    "# update layout with buttons                       \n",
+    "fig.update_layout(\n",
+    "    updatemenus=[\n",
+    "        dict(\n",
+    "        type=\"dropdown\",\n",
+    "        direction=\"down\",\n",
+    "        buttons = buttons)\n",
+    "    ],\n",
+    ")\n",
+    "# buttons\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "code",
