--- a/notebook/ML_cup_gs_Jacopo.ipynb
+++ b/notebook/ML_cup_gs_Jacopo.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hidden_len = 4\n",
+    "hidden_len = 32\n",
     "\n",
     "hidden_fun = 'tanh'\n",
     "output_fun = 'identity'\n",
@@ -115,20 +115,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MS = ModelSelection('blabla.csv')\n",
+    "MS = ModelSelection('1l_tanh_2.csv')\n",
+    "MS.default_values[\"metrics\"] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "\n",
     "hyperparam_grid = {\n",
-    "    'learning_rate':[0.01, 0.1, 0.2],\n",
-    "    'lr_decay_tau':[250],\n",
     "    'adamax' : [True, False],\n",
     "    'adamax_learning_rate' : [0.01, 0.05, 0.03, 0.07],\n",
     "    'exp_decay_rate_1':[0.9, 0.95],\n",
     "    'exp_decay_rate_2':[0.999],\n",
-    "    'alpha_momentum':[0.1, 0.5, 0.9],\n",
+    "    \n",
+    "    'learning_rate':[0.01, 0.1, 0.2],\n",
+    "    'lr_decay_tau':[250],\n",
     "    'lambda_tikhonov':[0.00001, 0.0001],\n",
+    "    'alpha_momentum':[0.1, 0.5, 0.9],\n",
     "    'batch_size':[int(training_len/20), int(training_len/40)],\n",
-    "    'min_epochs': [2],\n",
-    "    'max_epochs':[3],\n",
+    "    'min_epochs': [100],\n",
+    "    'max_epochs':[600],\n",
+    "    \n",
     "    'error_increase_tolerance':[0.00001],\n",
     "    'patience':[8],\n",
     "    'topology': [str(tanh_l1)],\n",
@@ -137,7 +140,7 @@
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_normalized, hyperparam_grid, 3, 1, True, constr)"
+    "MS.grid_searchKF(tr_normalized, hyperparam_grid, 3, 5, True, constr)"
    ]
   },
   {
@@ -193,7 +196,7 @@
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 6, False)"
+    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 5, False)"
    ]
   }
  ],
