--- a/notebook/ML_cup_gs_Giacomo.ipynb
+++ b/notebook/ML_cup_gs_Giacomo.ipynb
@@ -103,21 +103,25 @@
      "output_type": "stream",
      "text": [
       "Already done:  0\n",
-      "tot conf: 32\n",
-      "removed already done conf: 32\n",
-      "tot conf: 32\n",
-      "pid: 57094  started new kfold 1 / 11\n",
-      "pid: 57121  started new kfold 1 / 11\n",
-      "pid: 57164  started new kfold 1 / 11\n",
-      "pid: 57189  started new kfold 1 / 11\n",
-      "pid: 57220  started new kfold 1 / 11\n",
-      "pid: 57248  started new kfold 1 / 11\n",
-      "pid: 57281  started new kfold 1 / 11\n",
-      "pid: 57316  started new kfold 1 / 11\n",
-      "pid: 57342  started new kfold 1 / 11\n",
-      "pid: 57377  started new kfold 1 / 11\n",
-      "pid: 57404  started new kfold 1 / 11\n",
-      "pid: 57435  started new kfold 1 / 11\n"
+      "tot conf: 16\n",
+      "removed already done conf: 16\n",
+      "tot conf: 16\n",
+      "pid: 57660  started new kfold 1 / 11\n",
+      "pid: 57691  started new kfold 1 / 11\n",
+      "pid: 57716  started new kfold 1 / 11\n",
+      "pid: 57741  started new kfold 1 / 11\n",
+      "pid: 57772  started new kfold 1 / 11\n",
+      "pid: 57797  started new kfold 1 / 11\n",
+      "pid: 57822  started new kfold 1 / 11\n",
+      "pid: 57847  started new kfold 1 / 11\n",
+      "pid: 57878  started new kfold 1 / 11\n",
+      "pid: 57903  started new kfold 1 / 11\n",
+      "pid: 57928  started new kfold 1 / 11\n",
+      "pid: 57954  started new kfold 1 / 11\n",
+      "pid: 57691  started new kfold 2 / 11\n",
+      "pid: 57716  started new kfold 2 / 11\n",
+      "pid: 57660  started new kfold 2 / 11\n",
+      "pid: 57741  started new kfold 2 / 11\n"
      ]
     }
    ],
@@ -126,7 +130,7 @@
     "\n",
     "MS.default_values['metrics'] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "hyperparam_grid = {\n",
-    "    'adamax' : [True, False],\n",
+    "    'adamax' : [True],\n",
     "    'adamax_learning_rate' : [0.5, 0.3],\n",
     "    'exp_decay_rate_1':[0.9, 0.99],\n",
     "    'exp_decay_rate_2':[0.999],\n",
