--- a/notebook/ML_cup_gs_Simone_Sigmoid.ipynb
+++ b/notebook/ML_cup_gs_Simone_Sigmoid.ipynb
@@ -115,7 +115,11 @@
       "pid: 69094  started new kfold 2 / 14\n",
       "pid: 69153  started new kfold 2 / 14\n",
       "pid: 69094  started new kfold 3 / 14\n",
-      "pid: 69153  started new kfold 3 / 14\n"
+      "pid: 69153  started new kfold 3 / 14\n",
+      "pid: 69094  started new kfold 4 / 14\n",
+      "pid: 69094  started new kfold 5 / 14\n",
+      "pid: 69122  started new kfold 2 / 14\n",
+      "pid: 69178  started new kfold 2 / 14\n"
      ]
     }
    ],
