--- a/notebook/ML_cup_gs_Simone_Sigmoid.ipynb
+++ b/notebook/ML_cup_gs_Simone_Sigmoid.ipynb
@@ -104,25 +104,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already done:  19\n",
+      "Already done:  38\n",
       "tot conf: 68\n",
-      "removed already done conf: 49\n",
-      "tot conf: 49\n",
-      "pid: 69094  started new kfold 1 / 14\n",
-      "pid: 69122  started new kfold 1 / 14\n",
-      "pid: 69153  started new kfold 1 / 14\n",
-      "pid: 69178  started new kfold 1 / 14\n",
-      "pid: 69094  started new kfold 2 / 14\n",
-      "pid: 69153  started new kfold 2 / 14\n",
-      "pid: 69094  started new kfold 3 / 14\n",
-      "pid: 69153  started new kfold 3 / 14\n",
-      "pid: 69094  started new kfold 4 / 14\n",
-      "pid: 69094  started new kfold 5 / 14\n",
-      "pid: 69122  started new kfold 2 / 14\n",
-      "pid: 69178  started new kfold 2 / 14\n",
-      "pid: 69178  started new kfold 3 / 14\n",
-      "pid: 69178  started new kfold 4 / 14\n",
-      "pid: 69153  started new kfold 4 / 14\n"
+      "remaining conf: 30\n",
+      "tot conf to do: 30\n",
+      "pid: 91801  started new kfold 1 / 14\n",
+      "pid: 91826  started new kfold 1 / 14\n",
+      "pid: 91860  started new kfold 1 / 14\n",
+      "pid: 91885  started new kfold 1 / 14\n",
+      "pid: 91916  started new kfold 1 / 14\n",
+      "pid: 91826  started new kfold 2 / 14\n",
+      "pid: 91885  started new kfold 2 / 14\n",
+      "pid: 91801  started new kfold 2 / 14\n",
+      "pid: 91860  started new kfold 2 / 14\n",
+      "pid: 91916  started new kfold 2 / 14\n",
+      "pid: 91826  started new kfold 3 / 14\n",
+      "pid: 91885  started new kfold 3 / 14\n",
+      "pid: 91801  started new kfold 3 / 14\n",
+      "pid: 91860  started new kfold 3 / 14\n",
+      "pid: 91916  started new kfold 3 / 14\n"
      ]
     }
    ],
@@ -148,7 +148,7 @@
     "\n",
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
-    "MS.grid_searchKF(tr_normalized, hyperparam_grid,  3, 4, True, constr)"
+    "MS.grid_searchKF(tr_normalized, hyperparam_grid,  3, 5, True, constr)"
    ]
   }
  ],
