--- a/notebook/ML_cup_gs_Silver.ipynb
+++ b/notebook/ML_cup_gs_Silver.ipynb
@@ -132,7 +132,7 @@
     "hyperparam_grid = {\n",
     "    'adamax' : [False],\n",
     "    \n",
-    "    'learning_rate':[0.01, 0.03, 0.05, 0.1],\n",
+    "    'learning_rate':[0.01, 0.05, 0.2],\n",
     "    'lr_decay_tau':[175, 125, 225], #epochs\n",
     "    'lambda_tikhonov':[0.00001],\n",
     "    'alpha_momentum':[0.9],\n",
